[gd_scene load_steps=12 format=3 uid="uid://cl2i4dl6lxgtv"]

[ext_resource type="Script" path="res://scene/demo_2/demo_2.gd" id="1_5lsd2"]
[ext_resource type="PackedScene" uid="uid://2w3r3o4pddd5" path="res://packed_scene/gd_controller/gd_controller.tscn" id="2_3k0fw"]
[ext_resource type="PresetsData" uid="uid://chayxk85agbwg" path="res://scene/presets_data.tres" id="2_7e06j"]

[sub_resource type="StandardVoxelBlockData" id="StandardVoxelBlockData_h0lep"]
size = Vector3i(24, 12, 24)
voxels_data = PackedByteArray(1, 0, 0, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 253, 1, 224, 124, 1, 2, 0, 0, 0)
presets_data = ExtResource("2_7e06j")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ajwln"]
noise_type = 3

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gv8xu"]
noise_type = 3
seed = 32
frequency = 0.05

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vtxe5"]

[sub_resource type="Sky" id="Sky_d8vem"]
sky_material = SubResource("ProceduralSkyMaterial_vtxe5")

[sub_resource type="Environment" id="Environment_yocru"]
background_mode = 2
background_energy_multiplier = 3.0
sky = SubResource("Sky_d8vem")
ambient_light_source = 3
reflected_light_source = 2
ssr_enabled = true
ssil_enabled = true
glow_enabled = true
glow_intensity = 0.1

[sub_resource type="ArrayMesh" id="ArrayMesh_lyjwm"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_swvbx"]

[node name="Demo2" type="Node3D"]
script = ExtResource("1_5lsd2")
voxel_block_data = SubResource("StandardVoxelBlockData_h0lep")
noise_0 = SubResource("FastNoiseLite_ajwln")
noise_1 = SubResource("FastNoiseLite_gv8xu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yocru")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.983595, -0.0561924, -0.171418, -0.180389, 0.312443, 0.932652, 0.00115025, 0.948273, -0.317454, 0, 0, 0)
shadow_enabled = true
directional_shadow_mode = 0

[node name="GDController" parent="." instance=ExtResource("2_3k0fw")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -1, 4.64316, -1)
top_level = true

[node name="VoxelBlock_0" type="MeshInstance3D" parent="."]
transform = Transform3D(1.16413, -0.040902, 1.61803, 0.278346, 0.495134, 0, -1.60229, 0.0562967, 1.17557, 20.2998, 0, 0.900171)
mesh = SubResource("ArrayMesh_lyjwm")

[node name="StaticBody3D" type="StaticBody3D" parent="VoxelBlock_0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VoxelBlock_0/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_swvbx")

[node name="VoxelBlock_1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.902996, -0.378471, 0.203368, 0.170311, -0.119253, -0.978148, 0.394453, 0.917899, -0.0432273, -11.1855, 8.97794, -19.2177)
mesh = SubResource("ArrayMesh_lyjwm")

[node name="StaticBody3D" type="StaticBody3D" parent="VoxelBlock_1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VoxelBlock_1/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_swvbx")

[node name="VoxelBlock_2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.06927, 1.03518, -0.46415, -0.051583, 2.8118, 0.166499, 0.492484, 0.148906, 0.0827237, 7.1068, 0, 5.02571)
mesh = SubResource("ArrayMesh_lyjwm")

[node name="StaticBody3D" type="StaticBody3D" parent="VoxelBlock_2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VoxelBlock_2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_swvbx")
